[package]
name = "kratix-pipeline-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust2 = "0.7.0"
log = { version = "0.4", features = ["max_level_info", "release_max_level_warn"] }
env_logger = "0.11.3"
dotenv = "0.15.0"
