[package]
name = "kratix_utils"
version = "0.1.0"
edition = "2021"
authors = ["Howard Hill <howard.hill@opencredo.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust2 = "0.7.0"
dotenv = "0.15.0"
log = "0.4.21"
serde_yaml = "0.9.34"
toml = "0.5" 